fix: fixed spacing in contacts page

--- a/KTU-SA-WEB/src/pages/contacts/Contacts.module.css
+++ b/KTU-SA-WEB/src/pages/contacts/Contacts.module.css
@@ -15,3 +15,9 @@
         grid-template-columns: 1fr;
     }
 }
+
+@media (max-width: 500px) { 
+    .ContactCards {
+        margin-bottom: 200px;
+    }
+}
