--- a/KTU-SA-WEB/src/pages/contacts/components/MainContacts.module.css
+++ b/KTU-SA-WEB/src/pages/contacts/components/MainContacts.module.css
@@ -1,7 +1,6 @@
 .Container {
     display: flex;
     justify-content: space-around;
-    padding-top: 30px;
     margin-bottom: 60px;
 }
 
